--- a/index.html
+++ b/index.html
@@ -265,15 +265,15 @@
                     </div>
                   </div>
           
-                  <!-- 05: Software Development -->
+                  <!-- 05: AI/ML Engineering -->
                   <div class="swiper-slide wow animate fadeInUp" data-wow-delay="500ms" data-wow-duration="1500ms">
                     <div class="single-service">
                       <span>05</span>
                       <div class="icon">
                         <img src="assets/img/icons/service-icon-3.png" alt="Software Development Icon">
                       </div>
-                      <h4>Software Development</h4>
-                      <p>Scalable backend systems, APIs, and full-stack apps using Node.js, React, .NET Core, Django, MongoDB, PostgreSQL, and more.</p>
+                      <h4>AI/ML Engineering</h4>
+                      <p>We build intelligent systems and scalable AI/ML solutions, ranging from model development and training to deployment using Python, TensorFlow, PyTorch, AWS, Azure, and GCP.</p>
                       <div class="read-btn">
                         <a href="service-details.html">Read More</a>
                       </div>
