--- a/service.html
+++ b/service.html
@@ -220,9 +220,9 @@
                             <div class="icon">
                                 <img src="assets/img/icons/service-icon-3.png" alt="">
                             </div>
-                            <h4>Software Development</h4>
-                            <p>Custom software solutions built for performance, scalability, and integration tailored to your business goals.</p>
-                            <p><strong>Tech Stack:</strong> Python, Java, .NET, Node.js, Laravel, MySQL, MongoDB</p>
+                            <h4>AI/ML Engineering</h4>
+                            <p>We build intelligent systems and scalable AI/ML solutions, ranging from model development and training to deployment</p>
+                            <p><strong>Tech Stack:</strong> Python, TensorFlow, PyTorch, AWS, Azure, and GCP.</p>
                             <div class="read-btn">
                                 <a href="service-details.html">Read More</a>
                             </div>
